--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Gestion tareas y metodologias
 
 server.port=8862
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gtmbd
-spring.datasource.username=userdata
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestor_tareas
+spring.datasource.username=postgres
+spring.datasource.password=POS2023
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
