--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-url=jdbc:postgresql://localhost:5432/gtmbd
-username=userdata
-password=123456
+url=jdbc:postgresql://localhost:5432/gestor_tareas
+username=postgres
+password=POS2023
